[package]
name = "fsbd_escrow"
version = "0.1.0"
description = "FSBD optional escrow program - holds purchase funds until buyer confirms receipt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fsbd_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
